[package]
name = "multex"
version = "0.1.0"
edition = "2021"

[dependencies]
orn = "*"
libc = "*"
windows-sys = { version = "*", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }
thiserror = "*"

[dev-dependencies]
parking_lot = "*"
criterion = "*"
rayon = "*"

[[bench]]
name = "multex"
harness = false

[[bench]]
name = "layout"
harness = false
